--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap');
+  
 // 1. Config files and helpers
 
 // 2. Vendor
+@import vendor/normalize
 
 // 3. Base styles
 
