--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap');
   
 // 1. Config files and helpers
+@import abstracts/colors
 
 // 2. Vendor
 @import vendor/normalize
