Feat: add styling to whole page

--- a/css/main.css
+++ b/css/main.css
@@ -342,3 +342,8 @@ template {
 [hidden] {
   display: none;
 }
+
+*, *::before, *::after {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
