Fix: grid styling for header and hero

--- a/sass/layout/_header.sass
+++ b/sass/layout/_header.sass
@@ -1,6 +1,6 @@
 .main-header
   position: absolute
-  top: 0
+  top: 1em
   left: 0
   right: 0
 
@@ -10,4 +10,4 @@
   max-width: 15rem
 
 .main-nav
-  width: 60%
+  display: none
