--- a/css/main.css
+++ b/css/main.css
@@ -348,6 +348,17 @@ template {
           box-sizing: border-box;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.container {
+  width: 95%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
 .grid {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -356,7 +367,7 @@ template {
 
 .main-header {
   position: absolute;
-  top: 0;
+  top: 1em;
   left: 0;
   right: 0;
 }
@@ -368,11 +379,18 @@ template {
 }
 
 .main-nav {
-  width: 60%;
+  display: none;
 }
 
 .hero {
   background: -webkit-gradient(linear, left top, right top, from(#048ca8), to(#16db93));
   background: linear-gradient(to right, #048ca8, #16db93);
   color: white;
+  padding-top: 8em;
+  padding-bottom: 8em;
+  text-align: center;
+}
+
+.hero-img {
+  display: none;
 }
