--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,8 @@
  */
 html {
   font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-family: "Roboto", sans-serif;
   line-height: 1.6;
   /* 1 */
   -webkit-text-size-adjust: 100%;
@@ -354,9 +356,39 @@ img {
 }
 
 .container {
-  width: 95%;
+  width: 90%;
   max-width: 1200px;
   margin: 0 auto;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+  margin: 0 0 .75em;
+}
+
+h1:last-child, h2:last-child, h3:last-child,
+h4:last-child, h5:last-child, h6:last-child,
+p:last-child {
+  margin: 0;
+}
+
+h1 {
+  font-size: 2rem;
+  font-weight: 300;
+  line-height: 1.15;
+  text-transform: uppercase;
+}
+
+.title-large {
+  font-size: 3rem;
+  font-weight: 900;
+}
+
+.title-large span {
+  font-weight: 300;
+}
+
+.text-intro {
+  font-size: 1.2rem;
 }
 
 .grid {
